--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 * {
   padding: 0;
@@ -81,6 +84,7 @@ h4 {
 }
 .shadow {
   box-shadow: 0 0 20px 0 rgb(112 121 138 / 18%);
+  border-radius: 30px;
 }
 .padding {
   padding: 80px 0;
@@ -94,6 +98,7 @@ img {
   width: 100%;
   height: 100%;
   cursor: pointer;
+  border-radius: 30px 0;
 }
 .btn2 {
   border-radius: 50px;
@@ -154,6 +159,78 @@ img {
 .mb {
   margin-bottom: 80px;
 }
+body {
+  font-family: 'Arial', sans-serif;
+}
+
+.filter-wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 40px 0;
+}
+
+.filter-container {
+  display: flex;
+  gap: 126px;
+  background-color: white;
+  padding: 20px 40px;
+  border-radius: 15px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  align-items: center;
+}
+
+.filter-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.filter-item i {
+  font-size: 20px;
+  color: #000;
+}
+
+.filter-title {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.filter-description {
+  font-size: 14px;
+  color: #999;
+  border: none; /* Viền input */
+  width: 150%; /* Chiếm toàn bộ chiều rộng */
+  box-sizing: border-box; /* Đảm bảo padding không làm input to hơn */
+}
+
+.filter-description::placeholder {
+  color: #999; /* Màu của placeholder */
+}
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  border: 1px solid #ddd;
+  border-radius: 50px;
+  flex-grow: 1;
+}
+
+.search-bar i {
+  font-size: 16px;
+  margin-right: 10px;
+  color: #999;
+}
+
+.search-bar input {
+  border: none;
+  outline: none;
+  width: 100%;
+  font-size: 14px;
+  color: #999;
+}
+
 @media screen and (max-width: 800px) {
   .grid4,
   .grid3,
