--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -1,7 +1,5 @@
 header {
-  background-color: #fff;
   height: 10vh;
-  box-shadow: 0 5px 30px rgb(0 22 84 / 10%);
   padding: 15px 0;
   position: sticky;
   top: 0;
@@ -15,19 +13,10 @@ header a {
   transition: 0.5s;
   font-weight: 500;
 }
-header a:hover {
+/* header a:hover {
   color: #27ae60;
-}
-header span {
-  width: auto;
-  padding: 0px 6px;
-  background: #27ae60;
-  border-radius: 50px;
-  color: #ffffff;
-  margin-right: 4px;
-  font-weight: 400;
-}
-header h4 {
+} */
+der h4 {
   font-weight: 500;
   margin-right: 20px;
 }
