--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -1,17 +1,11 @@
 .hero {
-  background-image: url("../../../../public/images/banner.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  height: 90vh;
-  width: 100%;
+width: 100%;
+height: 100%;
 }
 .hero .container {
-  padding-top: 15%;
 }
 .hero h1 {
-  color: #fff;
-  font-size: 60px;
+
 }
 .hero p {
   color: #fff;
@@ -35,8 +29,13 @@ form span {
   color: grey;
 }
 input::placeholder {
-  font-size: 17px;
-  color: black;
+  color: #FFF;
+  text-align: left;
+  font-family: "Work Sans";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 form .box {
   padding: 15px;
