--- a/src/components/products/ProductDetail.css
+++ b/src/components/products/ProductDetail.css
@@ -7,15 +7,27 @@
 
 .product-top {
     display: flex;
+    flex-wrap: wrap;
     gap: 40px;
     margin-bottom: 40px;
 }
 
 /* Thumbnails */
 .product-thumbnails {
-    display: flex;
-    flex-direction: column;
     gap: 10px;
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 760px){
+    .product-thumbnails{
+        display: flex;
+        width: 100%;
+        width: 100%;
+        margin: 0 !important;
+    }
+    .product-main-image{
+        width: 100%;
+    }
 }
 
 .product-thumbnails img {
@@ -43,7 +55,13 @@
     object-fit: cover;
     border: 1px solid #ddd;
 }
+@media screen and (min-width: 320px) and (max-width: 760px){
+    .product-main-image{
+        width: 100%;
+    height: 100%;
 
+    }
+}
 /* Product information */
 .product-info {
     flex: 1;
@@ -198,7 +216,7 @@
 }
 
 /* Responsive styling for smaller devices */
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
     .product-main-image {
         width: 350px;
         height: 350px;
@@ -214,12 +232,12 @@
     
     .related-image-wrapper {
         flex-basis: calc(50% - 20px); /* Slightly smaller images on medium screens */
-    }
-}
+    
 
-@media (max-width: 768px) {
+
+/* @media (max-width: 768px) {
     .product-top {
-        flex-direction: column; /* Stack the thumbnails and main product image on smaller screens */
+        flex-direction: column; 
         align-items: center;
     }
     
@@ -234,17 +252,17 @@
     }
 
     .related-image-wrapper {
-        flex-basis: 100%; /* One image per row on small screens */
+        flex-basis: 100%; 
     }
 
     .related-images {
         gap: 10px;
     }
-}
+} */
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
     .tabs {
-        flex-direction: column; /* Stack tabs on top of each other */
+        flex-direction: column; 
         gap: 10px;
     }
 
@@ -265,4 +283,4 @@
         font-size: 12px;
         padding: 6px 12px;
     }
-}
+}  */
