--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"); */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+@font-face {
+  font-family: "Niveau Grotesk";
+  src: url("./acsset/fonts/niveau-grotesk.woff2") format("woff2"),
+       url("./acsset/fonts/niveau-grotesk.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+:root {
+  --theme-body-font-family: "Niveau Grotesk", -apple-system, BlinkMacSystemFont, "Segoe UI", Poppins, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Work Sans", sans-serif;
+  font-family: var(--theme-body-font-family) !important;
 
 }
 body {
-  font-family: "Work Sans", sans-serif;
-
+  font-family: var(--theme-body-font-family) !important;
 }
 
 .flex {
@@ -98,7 +108,6 @@ img {
   width: 100%;
   height: 100%;
   cursor: pointer;
-  border-radius: 30px 0;
 }
 .btn2 {
   border-radius: 50px;
@@ -145,7 +154,6 @@ img {
   left: 0;
   width: 100%;
   height: 40vh;
-  background: rgba(17, 40, 72, 0.629);
   z-index: -1;
 }
 .back .container {
@@ -153,14 +161,13 @@ img {
   padding: 120px 0;
 }
 .back h1 {
-  font-size: 40px;
+  font-size: 55px;
   font-weight: 500;
+  display: flex;
+  justify-content: center;
 }
 .mb {
   margin-bottom: 80px;
-}
-body {
-  font-family: 'Arial', sans-serif;
 }
 
 .filter-wrapper {
@@ -208,6 +215,10 @@ body {
   color: #999; /* Màu của placeholder */
 }
 
+.aaaaa {
+  width: 100%;
+  border-radius: 10px;
+}
 .search-bar {
   display: flex;
   align-items: center;
