--- a/src/App.css
+++ b/src/App.css
@@ -94,12 +94,12 @@ h4 {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 30px;
 }
-img {
+/* img {
   width: 100%;
   height: 100%;
   cursor: pointer;
   border-radius: 30px 0;
-}
+} */
 .btn2 {
   border-radius: 50px;
   font-size: 20px;
