--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,4 +1,4 @@
-.about {
+/* .about {
   margin-bottom: 80px;
 }
 .about .heading {
@@ -22,4 +22,4 @@
   .about .container img {
     margin-top: 50px;
   }
-}
+} */
