--- a/src/App.css
+++ b/src/App.css
@@ -254,7 +254,8 @@ h4 {
     width: 100%;
   }
   .container {
-    max-width: 90%;
+    max-width: 100%;
+    padding: 5px 5px;
   }
   .back::after,
   .back img,
