--- a/src/components/products/Product.css
+++ b/src/components/products/Product.css
@@ -3,7 +3,15 @@
     position: relative;
     display: flex;
   }
-  
+
+  @media screen and (min-width: 320px) and (max-width: 760px) {
+    .filter-container{
+      width: 100%;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: space-between;
+    }
+  }
   .dropdown-content {
     display: block;
     position: absolute;
